--- a/.github/workflows/sonar-cloud-scan.yml
+++ b/.github/workflows/sonar-cloud-scan.yml
@@ -1,5 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
+## GitHub Actions ##
 name: Sonar Cloud Scan
 #
 # Documentation:
@@ -10,26 +9,21 @@ name: Sonar Cloud Scan
 # Start the job on all push #
 #############################
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches:
       - "master"
       - "feature*"
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+      
+#############################
+# Set The job  
+#############################
 jobs:
   # This workflow contains a single job called
   SonarCloudTrigger:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Clone Repository
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
       - name: Analyse with SonarCloud
         uses: sonarsource/sonarcloud-github-action@v1.3
         env:
