--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.projectKey=Subhas-Dev_LAB.NET
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=AspNet_Lab,VirtualLab
+sonar.exclusions=packages
