--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.projectKey=Subhas-Dev_LAB.NET
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=AspNet_Lab,VirtualLab
 #sonar.exclusions=AspNet_Lab/AspNet_Lab/packages/**/*,VirtualLab/packages//**/*
-sonar.exclusions=/**/*/packages/**/*
+sonar.exclusions=/**/*/packages/**/*, /**/*/Scripts/**/*
